add_subdirectory(cenumerator)
add_subdirectory(creaderasync)
add_subdirectory(creadersync)
add_subdirectory(cwriterasync)
add_subdirectory(cwritersync)
if((((NOT QT.widgets.name_ISEMPTY))))
    add_subdirectory(enumerator)
    add_subdirectory(terminal)
    add_subdirectory(blockingsender)
    add_subdirectory(blockingreceiver)
    add_subdirectory(sender)
    add_subdirectory(receiver)
endif()
